--- a/Style/style.css
+++ b/Style/style.css
@@ -7,7 +7,7 @@
 }
 
 :root {
-    --background: linear-gradient(45deg, #ffffff, #445469);
+    --background: linear-gradient(45deg, #dddddd, #37547a);
     --color: black;
     --background-color: linear-gradient(45deg, #e0dfdf, #99b9e2);
 }
@@ -34,30 +34,30 @@ header{
 }
 
 .dark-mode{
-     position: absolute;
-     top: 20px;
+     margin-top: 20px;
      border-radius: 2rem;
      background-color: #777;
-     width: 46px;
-     height: 24px;
-     padding-left: 2px;
+     width: 48px;
+     height: 25px;
      cursor: pointer;
+     padding-top: 2px;
+     padding-left: 2px;
      display: flex;
      transition: background-color .3s linear , padding-left .3s linear;
  }
 
  .dark-mode span{
      position: relative;
-     width: 22px;
-     height: 22px;
+     width: 1.5rem;
+     height: 1.5rem;
      display: inline-block;
      border-radius: 50%;
      background-color:white;   
  }
 
- .dark-btn-on{
+ .dark-mode.dark-btn-on{
  padding-left: 22px;
- background-color: black;
+ background-color: springgreen;
 }
 
 /* darkmodebtn ends here */
